src/test/ui/inference/cannot-infer-async.stderr
error[E0282]: type annotations needed
  --> $DIR/cannot-infer-async.rs:11:20
   |
LL |         make_unit()?;
   |                    ^ cannot infer type
   |
help: consider giving this binding a type
   |
LL |     let fut: Type = async {
   |            ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
